[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/BgMusicManager.gd" type="Script" id=1]

[node name="BgMusic" type="Node"]
script = ExtResource( 1 )

[node name="BgStream1" type="AudioStreamPlayer" parent="."]
bus = "BgMusic"

[node name="BgStream2" type="AudioStreamPlayer" parent="."]
bus = "BgMusic"

[connection signal="finished" from="BgStream1" to="." method="_on_BgStream1_finished"]
[connection signal="finished" from="BgStream2" to="." method="_on_BgStream2_finished"]
